--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="share-button">
+            
+        </div>
+    </header>
+    <div class="container">
+        <div class="image-container">
+            <img class="avatar" name="avatar" src="images/avatar.webp"  alt="Avatar">
+        </div>
+        <h1>@paulthomas</h1>
+        <div class="tile"></div>
+        <div class="tile"></div>
+        <div class="tile"></div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
