--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LinkTree Clone With Ania</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header>
-        <div class="share-button">
-            
-        </div>
+      <div class="share-button"></div>
     </header>
     <div class="container">
-        <div class="image-container">
-            <img class="avatar" name="avatar" src="images/avatar.webp"  alt="Avatar">
-        </div>
-        <h1>@paulthomas</h1>
-        <div class="tile"></div>
-        <div class="tile"></div>
-        <div class="tile"></div>
+      <div class="image-container">
+        <img
+          src="images/avatar.webp"
+          alt="Avatar"
+        />
+      </div>
+      <h1>@paulthomas</h1>
+      <a class="tile" href="#">
+        <div class="icon"></div>
+        <p>YouTube</p>
+        <div class="title-share-button"></div>
+      </a>
+      <a class="tile" href="#">
+        <div class="icon"></div>
+        <p>Twitter</p>
+        <div class="title-share-button"></div>
+      </a>
+      <a class="tile" href="#">
+        <div class="icon"></div>
+        <p>Coding Tips !</p>
+        <div class="title-share-button"></div>
+      </a>
     </div>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
